# discord-example-app

./: .gitignore  app.js  app.ts  create_table.sql  flake.nix  oneGame.db  package-lock.json  package.json  patchelf.mjs  pyproject.toml  todo.md  tsconfig.json  yarn.nix
prisma/: dev.db-journal  schema.prisma
prisma/migrations/20230728162132_init/: migration.sql
prisma/migrations/20230728220746_init/: migration.sql
prisma/migrations/20230730005455_init/: migration.sql
prisma/migrations/20230731005921_init/: migration.sql
prisma/migrations/20230731010200_init/: migration.sql
prisma/migrations/20230731010454_init/: migration.sql
prisma/migrations/20230731012224_init/: migration.sql
prisma/migrations/20230731012921_init/: migration.sql
prisma/migrations/20230801013900_init/: migration.sql
prisma/migrations/20230801021755_init/: migration.sql
prisma/migrations/20230801153849_init/: migration.sql
scripts/: PAUSE.md  app.ts  buttons.ts  commands.ts  diagram.ts  diagramPrompts.ts  discord.ts  export.ts  figma.ts  gpt.ts  interaction.ts  interactionCreate.ts  listeners.ts  messages.ts  prompts.ts  pronouns.ts  propositions.ts  scenePrompt.ts  step.ts  submit.ts  text.ts  threads.ts  utils.ts  visualize.ts
scripts/commands/: analyze.ts  customCheck.ts  diagram.ts  export.ts  figma.ts  g.ts  instructions.ts  play.ts  sendToChannel.ts  spec.ts  submit.ts  tictactoe.ts  visualize.ts
scripts/commands/play/: start.ts  (+1 more)
scripts/prompts/: debug.ts  diagram.ts
scripts/utils/: encryption.ts  errors.ts  figma.ts  gpt.ts  logger.ts  math.ts  messages.ts
(+18 files in other folders)
