[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.00"
gym = "^0.26.2"
pydot = "^1.4.2"
pygame-ce = "^2.2.1"
pygraphviz = "^1.11"
matplotlib = "^3.7.1"
rich = "^13.4.1"
jupytext = "^1.14.6"
tiktoken = "^0.4.0"
openai = "^0.27.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.14.0"
jupyterlab = "^4.0.2"
ipykernel = "^6.23.1"
ipdb = "^0.13.13"
poetry2conda = "^0.3.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name = "game"
